--- a/TypeHappy/package.json
+++ b/TypeHappy/package.json
@@ -6,7 +6,7 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "^15.6.1",
+    "react": "^16.0.0-alpha.12",
     "react-native": "^0.45.1"
   }
 }
