--- a/TypeHappy/ios/TypeHappy/Info.plist
+++ b/TypeHappy/ios/TypeHappy/Info.plist
@@ -43,14 +43,27 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-			<key>NSExceptionDomains</key>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
 			<dict>
-					<key>localhost</key>
-					<dict>
-							<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
-							<true/>
-					</dict>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
 			</dict>
+		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 </dict>
 </plist>
