--- a/TypeHappy/ios/TypeHappy/Info.plist
+++ b/TypeHappy/ios/TypeHappy/Info.plist
@@ -45,7 +45,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+			<key>192.168.2.5</key>
 			<dict>
 				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
